[project]
name = "hobbes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "openai>=1.64.0",
    "pillow>=11.1.0",
    "pyboy>=2.5.1",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
]
